--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,7 @@
 ---
-// Component Imports
-import Button from '../components/Button.astro';
-import Layout from '../layouts/main.astro';
 
-// Full Astro Component Syntax:
-// https://docs.astro.build/basics/astro-components/
+import C from '../components/f2h/index.astro';
+
 ---
 
-<Layout content="23333">
-	<div class="grid place-items-center h-screen content-center">
-			<Button>Tailwind Button in Astro!</Button>
-			<a href="/markdown-page" class="p-4 underline">Markdown is also supported...</a>
-		</div>
-</Layout>
+<C />
