--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -2,7 +2,7 @@
 const { content } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="en" class="bg-[#4C9540]">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
