--- a/src/pages/2.astro
+++ b/src/pages/2.astro
@@ -1,8 +1,8 @@
 ---
 
 import Layout from '../layouts/main.astro';
-import C from '../components/content/index.astro';
-import Index from '../components/index.astro';
+// import C from '../components/content/index.astro';
+import Index from '../content/figma2html.astro';
 
 
 // Full Astro Component Syntax:
@@ -11,7 +11,7 @@ import Index from '../components/index.astro';
 
 <Layout content="23333">
   <div class="grid place-items-center h-screen content-center">
-    <C/>
+    <Index />
     <!--<Content />-->
     <!--<Index />-->
   </div>
