--- a/src/components/index.astro
+++ b/src/components/index.astro
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap" rel="stylesheet"/>
-  <link href="./css/main.css" rel="stylesheet"/>
+  <link href="f2h/css/main.cssss" rel="stylesheet"/>
   <title>Document</title></head>
 <body>
 <div class="v1_764">
