--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -236,10 +236,10 @@ const {
         <p class="absolute z-10 top-[80px] w-full text-center text-sm font-semibold text-white" >PepeBomb's future development directions include:</p >
 
         <div class="relative w-full mt-36" >
-          <svg width="2024" height="674" viewBox="0 0 2024 674" fill="none" xmlns="http://www.w3.org/2000/svg" class="absolute left-[calc(149px-149px)] top-0 right-0" preserveAspectRatio="none" >
+          <svg width="2024" height="674" viewBox="0 0 2024 674" fill="none" xmlns="http://www.w3.org/2000/svg" class="absolute w-screen left-[calc(149px-149px)] top-0 -right-1/3" preserveAspectRatio="none" >
             <path d="M0.5 48C0.5 21.7665 21.7665 0.5 48 0.5H1307.5V673.5H48C21.7665 673.5 0.5 652.234 0.5 626V48Z" fill="black" fill-opacity="0.6" stroke="white" ></path >
           </svg >
-          <img src="rectangle-587.png" class="w-[389.64px] h-[389.64px] absolute left-[calc(989px-149px)] top-[calc(2244px-1921px)] object-cover" />
+          <img src="rectangle-587-2.png" class="w-[389.64px] rotate-[14.11deg] h-[389.64px] absolute left-[calc(989px-149px)] top-[calc(2244px-1921px)] object-cover" />
 
           <div class="w-full flex flex-wrap" >
             <div class="w-[282px] h-[271px]" >
@@ -585,7 +585,7 @@ const {
       <!-- conclusion -->
 
       <!-- footer -->
-      <div class="relative flex flex-col">
+      <div class="relative flex flex-col gap-8">
         <!--<div class=" h-1 absolute left-1/4 w-screen bottom-0 bg-bomb z-50" style="box-shadow: 0px -4px 4px 0 rgba(0,0,0,0.25);" ></div>-->
         <div class="w-screen absolute -left-1/3 top-0 h-[100px] bg-bomb z-50" style="box-shadow: 0px -4px 4px 0 rgba(0,0,0,0.25);"></div>
 
@@ -597,7 +597,7 @@ const {
           <img src="assets/links/rectangle-602.png" class="w-[179.25px] h-[42px] object-cover" />
         </div >
 
-        <div class="flex w-full justify-between h-[100px] items-center mt-[100px]">
+        <div class="flex w-full justify-between h-[100px] items-center">
           <p class="flex-1 text-base text-black">Disclaimer 2024 pepebomb. All Rights Reserved</p>
 
           <div class="flex-1 flex items-center flex-nowrap justify-end gap-4">
