--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -17,7 +17,7 @@ const {
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap" rel="stylesheet" />
   <!--<link href="./css/main.css" rel="stylesheet"/>-->
-  <title >title</title >
+  <title >{title}</title >
 </head >
 <!-- 1440-1140 = 300 -->
 <body class="max-w-[1440px] my-0 mx-auto relative bg-bomb h-screen overflow-x-hidden" >
