--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -16,7 +16,6 @@ const {
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap" rel="stylesheet" />
-  <!--<link href="./css/main.css" rel="stylesheet"/>-->
   <title >{title}</title >
 </head >
 <!-- 1440-1140 = 300 -->
@@ -347,10 +346,11 @@ const {
         <p class="absolute z-10 top-0 w-full text-center text-[52px] font-bold text-white text-nowrap text-shadow-title" >Future Development Plans</p >
         <p class="absolute z-10 top-[80px] w-full text-center text-sm font-semibold text-white" >PepeBomb's future development directions include:</p >
 
-        <div class="relative w-full mt-36" >
-          <svg width="2024" height="674" viewBox="0 0 2024 674" fill="none" xmlns="http://www.w3.org/2000/svg" class="absolute w-screen left-[calc(149px-149px)] top-0 -right-1/3" preserveAspectRatio="none" >
+        <div class="relative mt-36" >
+          <div class="bg-black opacity-60 border min-h-[674px] absolute top-0 w-screen rounded-3xl"></div>
+          <!--<svg width="2024" height="674" viewBox="0 0 2024 674" fill="none" xmlns="http://www.w3.org/2000/svg" class="absolute w-screen top-0" preserveAspectRatio="none" >
             <path d="M0.5 48C0.5 21.7665 21.7665 0.5 48 0.5H1307.5V673.5H48C21.7665 673.5 0.5 652.234 0.5 626V48Z" fill="black" fill-opacity="0.6" stroke="white" ></path >
-          </svg >
+          </svg >-->
           <img src="assets/images/rectangle-587-2.png" class="w-[389.64px] rotate-[14.11deg] h-[389.64px] absolute left-[calc(989px-149px)] top-[calc(2244px-1921px)] object-cover" />
 
           <div class="w-full flex flex-wrap" >
