--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -17,6 +17,7 @@ const {
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap" rel="stylesheet" />
   <title >{title}</title >
+  <link rel="icon" type="image/png" href="favicon.svg">
 </head >
 <!-- 1440-1140 = 300 -->
 <body class="my-0 mx-auto relative bg-bomb h-screen overflow-x-hidden" >
