--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -480,7 +480,7 @@ const {
     <!-- divider -->
 
     <!-- conclusion -->
-    <div class="w_1440 flex relative min-h-[634px]" >
+    <div class="w_1440 flex -mt-20 relative min-h-[634px]" >
       <div class="" >
         <svg width="536" height="100%" fill="none" xmlns="http://www.w3.org/2000/svg" class="absolute block left-[calc(144.5px-93.5px)] top-[calc(4070.5px-3901.5px)] opacity-50" preserveAspectRatio="xMidYMid meet" >
           <circle opacity="0.5" cx="268" cy="268" r="268" fill="url(#paint0_linear_1_923)" ></circle >
