--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -480,7 +480,7 @@ const {
     <!-- divider -->
 
     <!-- conclusion -->
-    <div class="w_1440 flex -mt-20 relative min-h-[634px]" >
+    <div class="w_1440 flex relative min-h-[634px]" >
       <div class="" >
         <svg width="536" height="100%" fill="none" xmlns="http://www.w3.org/2000/svg" class="absolute block left-[calc(144.5px-93.5px)] top-[calc(4070.5px-3901.5px)] opacity-50" preserveAspectRatio="xMidYMid meet" >
           <circle opacity="0.5" cx="268" cy="268" r="268" fill="url(#paint0_linear_1_923)" ></circle >
@@ -543,7 +543,7 @@ const {
     <!-- conclusion -->
 
     <!-- footer -->
-    <div class="relative flex flex-col gap-8">
+    <div class="relative flex flex-col gap-8 -mt-20">
       <!--<div class=" h-1 absolute left-1/4 w-screen bottom-0 bg-bomb z-50" style="box-shadow: 0px -4px 4px 0 rgba(0,0,0,0.25);" ></div>-->
       <div class="w-screen absolute left-0 top-0 h-[100px] bg-bomb z-50" style="box-shadow: 0px -4px 4px 0 rgba(0,0,0,0.25);"></div>
 
