--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -55,13 +55,13 @@ const {
 
 
         <div class="w-full flex flex-col gap-8 relative px-14 py-4" >
-          <svg width="100%" height="100%" fill="none" xmlns="http://www.w3.org/2000/svg" class="absolute left-0 top-0" preserveAspectRatio="none" >
+          <svg width="100%" height="100%" fill="none" xmlns="http://www.w3.org/2000/svg" class="min-h-[610px] absolute left-0 top-0" preserveAspectRatio="none" >
             <path d="M0.5 0.5H1100C1121.82 0.5 1139.5 18.1848 1139.5 40V609.5H40C18.1847 609.5 0.5 591.815 0.5 570V0.5Z" fill="black" fill-opacity="0.6" stroke="white" ></path >
           </svg >
 
           <div class="flex z-10" >
-            <img src="assets/images/rectangle-582.png" class="w-[281px] h-[281px] object-cover -mt-20" />
-            <p class="flex-1 text-[40px] font-bold text-left text-white" >
+            <img src="assets/images/rectangle-582.png" class="w-[281px] h-[281px] object-cover -mt-16" />
+            <p class="flex-1 text-[40px] font-bold text-left text-white break-all	" >
               PepeBomb utilizes Ethereum, compatible with major DeFi apps and services, expanding beyond trading with its versatile smart contract potential.
             </p >
           </div >
@@ -351,7 +351,7 @@ const {
           </div >
 
           <div class="w-[732px] h-[546px]" >
-            <p class="absolute left-[calc(551px-126.5px)] top-0 text-[52px] font-bold text-left text-white text-nowrap text-shadow-title" >
+            <p class="absolute left-[calc(551px-126.5px)] top-0 text-[52px] font-bold text-left text-white w-full text-nowrap text-shadow-title" >
               Potential Application Scenarios
             </p >
             <p class="absolute left-[calc(551px-126.5px)] top-[calc(2800px-2731px)] text-xl font-semibold text-left text-white text-nowrap" >
