--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -21,7 +21,7 @@ const {
 </head >
 <!-- 1440-1140 = 300 -->
 <body class="my-0 mx-auto relative bg-bomb h-screen overflow-x-hidden" >
-  <div class="w-full relative gap-20 flex flex-col justify-center">
+  <div class="w-full relative gap-20 flex flex-col justify-center overflow-x-hidden">
 
     <!--header-->
     <div class="w-full fixed left-0 top-0 shadow-header bg-bomb z-50" >
