--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -547,7 +547,7 @@ const {
       <!--<div class=" h-1 absolute left-1/4 w-screen bottom-0 bg-bomb z-50" style="box-shadow: 0px -4px 4px 0 rgba(0,0,0,0.25);" ></div>-->
       <div class="w-screen absolute left-0 top-0 h-[100px] bg-bomb z-50" style="box-shadow: 0px -4px 4px 0 rgba(0,0,0,0.25);"></div>
 
-      <div class="w-full max-w-[1440px] px-24 mx-auto z-50">
+      <div class="w-full max-w-[1440px] px-24 mx-auto z-50 flex flex-col gap-8">
         <div class="flex justify-between items-center flex-nowrap mt-7 px-12" >
           <img src="assets/images/rectangle-598.png" class="w-[155.25px] h-[40.5px] object-cover" />
           <img src="assets/images/rectangle-599.png" class="w-[226.5px] h-[39.75px] object-cover" />
