--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -1,5 +1,5 @@
 ---
-import './css/main.css';
+import './main.css';
 import content from './static';
 
 const {
@@ -413,7 +413,7 @@ const {
         <div class="flex w-full justify-between h-[100px] items-center sm:f-c" >
           <p class="flex-1 text-base text-black" >Disclaimer 2024 pepebomb. All Rights Reserved</p >
 
-          <div class="flex-1 flex items-center flex-nowrap justify-end sm:justify-between gap-4" >
+          <div class="flex-1 flex items-center flex-nowrap justify-end sm:justify-between gap-4 mb-8" >
             <p class="text-xl text-black text-nowrap" >social media</p >
             <svg height="31" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-[31px] w-[256px]" preserveAspectRatio="none" >
               <a >
