--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -82,29 +82,25 @@ const {
             <div class="flex-1" >
               <p data-aos="zoom-in-down" data-aos-delay="200" data-aos-duration="800" class="text-2xl font-semibold text-left text-white" >01</p >
               <p data-aos="zoom-in-down" data-aos-delay="400" data-aos-duration="800" class="text-2xl font-bold text-left text-white py-3" >Automated Trading</p >
-              <p class="text-base font-medium text-left text-white" >
-              <span data-aos="zoom-in-down" data-aos-delay="500" data-aos-duration="800" class="text-base font-medium text-left text-white leading-7" >
+              <p data-aos="zoom-in-down" data-aos-delay="500" data-aos-duration="800" class="text-base font-medium text-left text-white leading-7" >
                 By collaborating with decentralized trading platforms like UniSwap,
                 PepeBomb has implemented an automated liquidity provision mechanism. Smart contracts allow for
                 intermediary-free token transactions, ensuring transparency and efficiency in trading.
-              </span > <br />
               </p >
             </div >
 
             <div class="flex-1" >
               <p data-aos="zoom-in-down" data-aos-delay="400" data-aos-duration="800" class="text-2xl font-semibold text-left text-white" >02</p >
               <p data-aos="zoom-in-down" data-aos-delay="600" data-aos-duration="800" class="text-2xl font-bold text-left text-white py-4" >Contract Security</p >
-              <p class="text-base font-medium text-left text-white" >
-              <span data-aos="zoom-in-down" data-aos-delay="200" data-aos-duration="700" class="text-base font-medium text-left text-white leading-7" >Utilizing the latest security protocols and code auditing services to ensure the safety of
+              <p data-aos="zoom-in-down" data-aos-delay="700" data-aos-duration="700" class="text-base font-medium text-left text-white leading-7" >Utilizing the latest security protocols and code auditing services to ensure the safety of
                 all smart contracts, preventing common blockchain security issues such as re-entrancy
                 attacks and integer overflows.
-              </span > <br />
               </p >
             </div >
 
             <div class="flex-1" >
-              <p data-aos="zoom-in-down" data-aos-delay="500" data-aos-duration="800" class="text-2xl font-semibold text-left text-white" >03</p >
-              <p data-aos="zoom-in-down" data-aos-delay="850" data-aos-duration="800" class="text-2xl font-bold text-left text-white py-4" >Contract Upgrades</p >
+              <p data-aos="zoom-in-down" data-aos-delay="600" data-aos-duration="800" class="text-2xl font-semibold text-left text-white" >03</p >
+              <p data-aos="zoom-in-down" data-aos-delay="700" data-aos-duration="800" class="text-2xl font-bold text-left text-white py-4" >Contract Upgrades</p >
               <p data-aos="zoom-in-down" data-aos-delay="800" data-aos-duration="800" class="text-base font-medium text-left text-white leading-7" >
                 Designed with an upgradable mechanism to adapt to future market and technology changes. Through a proxy contract architecture, it is possible to upgrade contract logic and functionality without affecting existing user assets.
               </p >
