--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -32,7 +32,7 @@ const {
         <div class="size-[88px] sm:size-[60px]" >
           <img class="object-contain w-full h-full" src="/assets/images/v1_809.png" />
         </div >
-        <span data-aos="zoom-in-left" data-aos-duration="1000" class="h-title sm:text-xl" >{header.title}</span >
+        <span data-aos="zoom-in-left" data-aos-duration="1500" class="h-title sm:text-xl" >{header.title}</span >
       </div >
     </div >
     <!--header-->
@@ -52,7 +52,7 @@ const {
               </div >
 
               <div class="size-[429px] md:size-[400px] flex-shrink-0" >
-                <img data-aos="fade-left" data-aos-delay="600" data-aos-duration="1000" class="w-full h-full object-contain" src="/assets/images/v2_1146.png" />
+                <img data-aos="fade-left" data-aos-delay="600" data-aos-duration="1500" class="w-full h-full object-contain" src="/assets/images/v2_1146.png" />
               </div >
             </div >
 
@@ -72,10 +72,10 @@ const {
           <div class="bg-black opacity-60 border min-h-[610px] w-full h-full absolute left-0 top-0 rounded-3xl hidden sm:block md:block" ></div >
 
           <div class="flex z-10 sm:block" >
-            <img data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000" src="assets/images/rectangle-582.png" class="sm:float-left size-[281px] sm:size-[180px] object-cover -mt-16" />
-            <span data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="800" class="flex-1 t2 text-left break-all sm:break-normal" >
+            <img data-aos="fade-right" data-aos-delay="300" data-aos-duration="1500" src="assets/images/rectangle-582.png" class="sm:float-left size-[281px] sm:size-[180px] object-cover -mt-16" />
+            <p data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="800" class="flex-1 t2 text-left break-all sm:break-normal" >
               PepeBomb utilizes Ethereum, compatible with major DeFi apps and services, expanding beyond trading with its versatile smart contract potential.
-            </span >
+            </p >
           </div >
 
           <div class="flex justify-between gap-16 z-10 sm:flex-col sm:gap-8" >
@@ -233,7 +233,7 @@ const {
               ))
             }
             <div class="relative w-full sm:text-center" >
-              <img data-aos="fade-down-left" data-aos-delay="400" data-aos-duration="1000" src="assets/images/rectangle-587-2.png" class="absolute left-0 sm:relative size-[389.64px] rotate-[14.11deg] object-contain" />
+              <img data-aos="fade-down-left" data-aos-delay="400" data-aos-duration="1500" src="assets/images/rectangle-587-2.png" class="absolute left-0 sm:relative size-[389.64px] rotate-[14.11deg] object-contain" />
             </div >
           </div >
         </div >
@@ -244,12 +244,12 @@ const {
       <div class="w-full flex sm:f-c sm:flex-col-reverse gap-8 items-center" >
 
         <div class="relative f-c" >
-          <div data-aos="zoom-in-up" data-aos-delay="100" data-aos-duration="1000" class="w-[414px] h-[549px]" >
-            <img data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" src="assets/images/rectangle-590.png" class="w-[414px] h-[414px] absolute left-[calc(126.5px-126.5px)] top-[calc(2862.5px-2731px)] object-cover" />
-            <img data-aos="zoom-in-down" data-aos-delay="500" data-aos-duration="1000" src="assets/images/rectangle-591.png" class="w-[68.25px] h-[68.25px] absolute left-[calc(151.63px-126.5px)] top-[calc(2828.63px-2731px)] object-contain" />
-            <img data-aos="zoom-in-down" data-aos-delay="700" data-aos-duration="1000" src="assets/images/rectangle-592.png" class="w-[68.25px] h-[68.25px] absolute left-[calc(366.63px-126.5px)] top-[calc(2727.63px-2731px)] object-contain" />
-            <img data-aos="zoom-in-down" data-aos-delay="900" data-aos-duration="1000" src="assets/images/rectangle-593.png" class="w-[54.6px] h-[54.6px] absolute left-[calc(444.7px-126.5px)] top-[calc(2821.7px-2731px)] object-contain" />
-            <img data-aos="zoom-in-down" data-aos-delay="1000" data-aos-duration="1000" src="assets/images/rectangle-594.png" class="w-[95.55px] h-[95.55px] absolute left-[calc(237.48px-126.5px)] top-[calc(2752.48px-2731px)] object-contain" />
+          <div data-aos="zoom-in-up" data-aos-delay="100" data-aos-duration="1500" class="w-[414px] h-[549px]" >
+            <img data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1500" src="assets/images/rectangle-590.png" class="w-[414px] h-[414px] absolute left-[calc(126.5px-126.5px)] top-[calc(2862.5px-2731px)] object-cover" />
+            <img data-aos="zoom-in-down" data-aos-delay="500" data-aos-duration="1500" src="assets/images/rectangle-591.png" class="w-[68.25px] h-[68.25px] absolute left-[calc(151.63px-126.5px)] top-[calc(2828.63px-2731px)] object-contain" />
+            <img data-aos="zoom-in-down" data-aos-delay="700" data-aos-duration="1500" src="assets/images/rectangle-592.png" class="w-[68.25px] h-[68.25px] absolute left-[calc(366.63px-126.5px)] top-[calc(2727.63px-2731px)] object-contain" />
+            <img data-aos="zoom-in-down" data-aos-delay="900" data-aos-duration="1500" src="assets/images/rectangle-593.png" class="w-[54.6px] h-[54.6px] absolute left-[calc(444.7px-126.5px)] top-[calc(2821.7px-2731px)] object-contain" />
+            <img data-aos="zoom-in-down" data-aos-delay="1000" data-aos-duration="1500" src="assets/images/rectangle-594.png" class="w-[95.55px] h-[95.55px] absolute left-[calc(237.48px-126.5px)] top-[calc(2752.48px-2731px)] object-contain" />
           </div >
         </div >
 
@@ -305,7 +305,7 @@ const {
         </svg >-->
         <div class="bg-black opacity-60 border w-full h-full absolute left-0 top-0 rounded-3xl sm:block -z-10" ></div >
 
-        <img data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000" src="assets/images/rectangle-595.png" class="self-start size-[300px] object-contain" />
+        <img data-aos="fade-right" data-aos-delay="300" data-aos-duration="1500" src="assets/images/rectangle-595.png" class="self-start size-[300px] object-contain" />
 
         <div class="f-c justify-center gap-8 self-center">
           <p data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="800" class="t1 text-left text-nowrap sm:text-wrap" >Technological Foresight</p >
@@ -316,14 +316,14 @@ const {
             Conclusion
           </p >
         </div>
-        <img data-aos="fade-left" data-aos-delay="300" data-aos-duration="1000" src="assets/images/rectangle-582-2.png" class="self-end size-[274px] object-contain translate-y-8" />
+        <img data-aos="fade-left" data-aos-delay="300" data-aos-duration="1500" src="assets/images/rectangle-582-2.png" class="self-end size-[274px] object-contain translate-y-8" />
       </div >
       <!-- technical foresight -->
     </div >
 
     <!-- divider -->
     <div class="relative w-full flex" >
-      <svg data-aos="flip-left" data-aos-delay="100" data-aos-duration="1000" class="w-screen absolute left-0 top-0" width="100%" height="23" viewBox="0 0 1440 23" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" >
+      <svg data-aos="flip-left" data-aos-delay="100" data-aos-duration="1500" class="w-screen absolute left-0 top-0" width="100%" height="23" viewBox="0 0 1440 23" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" >
         <path d="M0 0H1440V19.5999C1440 19.5999 1380.41 27.2501 1286.41 19.5999C1253.33 16.9084 1205.75 13.1566 1157.96 13.2533C1069.91 13.4316 981.159 19.5999 981.159 19.5999C981.159 19.5999 905.837 12.7399 769.07 19.5999C632.302 26.4599 487.606 19.5999 487.606 19.5999C487.606 19.5999 313.178 9.79996 200.196 12.7399C87.2141 15.6799 0 19.5999 0 19.5999V0Z" fill="white" ></path >
       </svg >
     </div >
@@ -344,7 +344,7 @@ const {
             </linearGradient >
           </defs >
         </svg >
-        <img data-aos="zoom-in-down" data-aos-delay="100" data-aos-duration="1000" src="assets/images/conclusion.png" class="size-[665px] object-contain" />
+        <img data-aos="zoom-in-down" data-aos-delay="100" data-aos-duration="1500" src="assets/images/conclusion.png" class="size-[665px] object-contain" />
       </div >
 
       <div class="flex-1 relative f-c gap-6" >
