--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -316,7 +316,9 @@ const {
             Conclusion
           </p >
         </div>
-        <img data-aos="fade-left" data-aos-delay="300" data-aos-duration="1500" src="assets/images/rectangle-582-2.png" class="self-end size-[274px] object-contain translate-y-8" />
+        <div class="translate-y-8 size-[274px] self-end flex-shrink-0">
+          <img data-aos="fade-left" data-aos-delay="300" data-aos-duration="1500" src="assets/images/rectangle-582-2.png" class="w-full object-contain" />
+        </div>
       </div >
       <!-- technical foresight -->
     </div >
@@ -344,7 +346,7 @@ const {
             </linearGradient >
           </defs >
         </svg >
-        <img data-aos="zoom-in-down" data-aos-delay="100" data-aos-duration="1500" src="assets/images/conclusion.png" class="size-[665px] object-contain" />
+        <img data-aos="zoom-in-down" data-aos-delay="100" data-aos-duration="2000" src="assets/images/conclusion.png" class="size-[665px] object-contain" />
       </div >
 
       <div class="flex-1 relative f-c gap-6" >
