--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -51,7 +51,7 @@ const {
                 <span data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="800" class="text-white text-pretty leading-8" >{overview.items[0].description}</span >
               </div >
 
-              <div class="size-[429px] md:size-[400px] flex-shrink-0" >
+              <div class="size-[429px] md:size-[400px] sm:size-[375px] flex-shrink-0" >
                 <img data-aos="fade-left" data-aos-delay="600" data-aos-duration="1500" class="w-full h-full object-contain" src="/assets/images/v2_1146.png" />
               </div >
             </div >
@@ -232,8 +232,8 @@ const {
                       </div >
               ))
             }
-            <div class="relative w-full sm:text-center" >
-              <img data-aos="fade-down-left" data-aos-delay="400" data-aos-duration="1500" src="assets/images/rectangle-587-2.png" class="absolute left-0 sm:relative size-[389.64px] rotate-[14.11deg] object-contain" />
+            <div class="relative w-full sm:text-center rotate-[14.11deg]" >
+              <img data-aos="fade-down-left" data-aos-delay="400" data-aos-duration="1500" src="assets/images/rectangle-587-2.png" class="absolute left-0 sm:relative size-[389.64px] object-contain" />
             </div >
           </div >
         </div >
@@ -245,7 +245,7 @@ const {
 
         <div class="relative f-c" >
           <div data-aos="zoom-in-up" data-aos-delay="100" data-aos-duration="1500" class="w-[414px] h-[549px]" >
-            <img data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1500" src="assets/images/rectangle-590.png" class="w-[414px] h-[414px] absolute left-[calc(126.5px-126.5px)] top-[calc(2862.5px-2731px)] object-cover" />
+            <img data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1500" src="assets/images/rectangle-590.png" class="size-[414px] sm:size-[375px] absolute left-[calc(126.5px-126.5px)] top-[calc(2862.5px-2731px)] object-cover" />
             <img data-aos="zoom-in-down" data-aos-delay="500" data-aos-duration="1500" src="assets/images/rectangle-591.png" class="w-[68.25px] h-[68.25px] absolute left-[calc(151.63px-126.5px)] top-[calc(2828.63px-2731px)] object-contain" />
             <img data-aos="zoom-in-down" data-aos-delay="700" data-aos-duration="1500" src="assets/images/rectangle-592.png" class="w-[68.25px] h-[68.25px] absolute left-[calc(366.63px-126.5px)] top-[calc(2727.63px-2731px)] object-contain" />
             <img data-aos="zoom-in-down" data-aos-delay="900" data-aos-duration="1500" src="assets/images/rectangle-593.png" class="w-[54.6px] h-[54.6px] absolute left-[calc(444.7px-126.5px)] top-[calc(2821.7px-2731px)] object-contain" />
