--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -413,7 +413,7 @@ const {
         </div >
 
         <div class="flex w-full justify-between h-[100px] items-center sm:f-c" >
-          <p class="flex-1 text-base text-black" >Disclaimer 2024 pepebomb. All Rights Reserved</p >
+          <p class="flex-1 text-base text-black" >Disclaimer © 2024 pepebomb. All Rights Reserved</p >
 
           <div class="flex-1 flex items-center flex-nowrap justify-end sm:justify-between gap-4 mb-8" >
 
