--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -412,10 +412,10 @@ const {
           </a>
         </div >
 
-        <div class="flex w-full justify-between h-[100px] items-center sm:f-c" >
+        <div class="flex w-full justify-between h-[100px] items-center sm:f-c mb-8" >
           <p class="flex-1 text-base text-black" >Disclaimer © 2024 pepebomb. All Rights Reserved</p >
 
-          <div class="flex-1 flex items-center flex-nowrap justify-end sm:justify-between gap-4 mb-8" >
+          <div class="flex-1 flex items-center flex-nowrap justify-end sm:justify-between gap-4" >
 
             <p class="text-xl text-black text-nowrap" >social media</p>
 
