--- a/src/components/f2h/index.astro
+++ b/src/components/f2h/index.astro
@@ -21,6 +21,16 @@ const {
   <link href="https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap" rel="stylesheet" />
   <title >{title}</title >
   <link rel="icon" type="image/png" href="favicon.svg" >
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4R00FTKF3N"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    
+    gtag('config', 'G-4R00FTKF3N');
+  </script>
 </head >
 <!-- 1440-1140 = 300 -->
 <body class="my-0 mx-auto relative bg-bomb h-screen overflow-x-hidden" >
